fix(story): remove scroll bar on safari

--- a/src/scripts/components/main/app/app.css
+++ b/src/scripts/components/main/app/app.css
@@ -10,6 +10,10 @@
   src: url("../../../../../assets/fonts/NotesEsaBol.otf");
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 /* default margin and padding*/
 * {
   margin: 0;
